--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -21,15 +21,17 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_place_detail"
-        android:layout_width="391dp"
-        android:layout_height="241dp"
+        android:layout_width="380dp"
+        android:layout_height="250dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
+        android:layout_marginEnd="16dp"
         android:scaleType="centerCrop"
-        app:shapeAppearanceOverlay="@style/roundImageView"
         app:layout_constraintBottom_toTopOf="@+id/tv_place_desc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:shapeAppearanceOverlay="@style/roundImageView"
         tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
     <ImageView
@@ -58,8 +60,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="409dp"
-        android:layout_height="49dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -103,12 +105,15 @@
 
     <RelativeLayout
         android:id="@+id/rl_Fragments"
-        android:layout_width="match_parent"
-        android:layout_height="270dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
