--- a/app/src/main/res/layout/activity_places_region.xml
+++ b/app/src/main/res/layout/activity_places_region.xml
@@ -31,8 +31,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_places"
-        android:layout_width="390dp"
-        android:layout_height="650dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
