--- a/app/src/main/res/layout/activity_place.xml
+++ b/app/src/main/res/layout/activity_place.xml
@@ -21,7 +21,7 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_place_detail"
-        android:layout_width="380dp"
+        android:layout_width="0dp"
         android:layout_height="250dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
@@ -48,9 +48,11 @@
 
     <TextView
         android:id="@+id/tv_place_desc"
-        android:layout_width="387dp"
+        android:layout_width="0dp"
         android:layout_height="90dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="10dp"
         android:textColor="@color/white"
         android:textSize="15dp"
         app:layout_constraintEnd_toEndOf="parent"
